Pre Sprints Changes

--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -48,7 +48,7 @@
 }
 
 .hero-container {
-   //background: url('../img/HeroBackDots.jpg') center center/cover no-repeat;
+ //  background: url('../img/CoverHero.png') center center/cover no-repeat;
    //background-color: #D4DDDD;
 
 
