--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -3,8 +3,8 @@
 }
 
 .nav-logo{
-    width: 50px;
-    height: 50px;
+    width: 85px;
+    
 }
 
 
@@ -27,9 +27,7 @@
 
 .feature-img{
      height: 500px;
-    width: 500px;
-    
-						
+    width: 500px;					
 }
 
 /* Featurettes
@@ -51,30 +49,33 @@
  //  background: url('../img/CoverHero.png') center center/cover no-repeat;
    //background-color: #D4DDDD;
 
-
-    height: 100vh;
+height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  //box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   object-fit: contain;
-  //clip-path: polygon(0 0, 100% 0, 100% 73%, 0% 100%);
+  
 }
 
-.hero-container > h1 {
-  color: rgb(231, 162, 116);
+.hero-container >  h1 {
+  color:#9F42CB;
   font-size: 100px;
   margin-top: -100px;
   font-family: 'Quicksand', sans-serif;
 }
 
-.hero-container > p {
+.hero-container >  p {
   margin-top: 8px;
-  color: rgb(126, 124, 124);
+  color: rgb(97, 96, 96);
   font-size: 32px;
   font-family: 'Quicksand', sans-serif;
+}
+
+.hero-container > img {
+  width: 400px;
+  height: 400px;
 }
 
 .card{
