--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -60,7 +60,7 @@ height: 100vh;
 }
 
 .hero-container >  h1 {
-  color:#9F42CB;
+  color:#843885;
   font-size: 100px;
   margin-top: -100px;
   font-family: 'Quicksand', sans-serif;
@@ -83,7 +83,7 @@ height: 100vh;
 }
 
 .vision_section {
-    background-color: #191970;
+    background-color: #843885;
     color: #ffffff;
     text-align: justify;
 }
