--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -86,6 +86,15 @@ height: 100vh;
     width: 18rem;
 }
 
+.card-deck .card-title{
+    font-size: 25px;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.home__demo__title{
+    font-family: 'Quicksand', sans-serif;
+}
+
 .vision_section {
     background-color: #3B2699;
     color: #ffffff;
@@ -108,6 +117,10 @@ height: 100vh;
   
    background-color: rgb(48, 25, 151);
    color:#ffffff;
+
+   .h{
+       font-family: 'Quicksand', sans-serif;
+   }
 }
 
 .recongnition_section{
