--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -110,16 +110,23 @@ height: 100vh;
 }
 
 .vision_section .card-deck{
-    color: #1b1b1b;
+    background-color: #3B2699;
+    
     
 }
 
-.vision_section .card-body{
-     
-    -webkit-box-shadow: -1px 0px 25px 9px rgba(0, 0, 0, 0.09);
-    -moz-box-shadow: -1px 0px 25px 9px rgba(0, 0, 0, 0.09);
-    box-shadow: -1px 0px 25px 9px rgba(0, 0, 0, 0.09);
+.vision_section .card{
+    background-color: #3B2699;
+    color: #ebebeb;
+    border: none;
+    
 }
+
+.reasons{
+    background-color: #3B2699;
+}
+
+
 
 
 
@@ -211,8 +218,83 @@ height: 100vh;
     border-radius: 50px 0 50px;
 }
 
+/*==================================================
+                    Pricing CSS
+===================================================*/
 
 
+section.pricing {
+  //background: #007bff;
+  //background: linear-gradient(to right, #0062E6, #33AEFF);
+}
+
+.pricing .card {
+  border: none;
+  border-radius: 1rem;
+  transition: all 0.2s;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+}
+
+.pricing hr {
+  margin: 1.5rem 0;
+}
+
+.pricing .card-title {
+  margin: 0.5rem 0;
+  font-size: 0.9rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+}
+
+.pricing .card-price {
+  font-size: 3rem;
+  margin: 0;
+}
+
+.pricing .card-price .period {
+  font-size: 0.8rem;
+}
+
+.pricing ul li {
+  margin-bottom: 1rem;
+}
+
+.pricing .text-muted {
+  opacity: 0.7;
+}
+
+.pricing .btn {
+  font-size: 80%;
+  border-radius: 5rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+  padding: 1rem;
+  opacity: 0.7;
+  transition: all 0.2s;
+}
+
+/* Hover Effects on Card */
+
+@media (min-width: 992px) {
+  .pricing .card:hover {
+    margin-top: -.25rem;
+    margin-bottom: .25rem;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.3);
+  }
+  .pricing .card:hover .btn {
+    opacity: 1;
+  }
+}
+
+.login-tittle{
+    font-family: 'Quicksand', sans-serif;
+     color: #7D1FC9; 
+}
+
+.register-tittle{
+    font-family: 'Quicksand', sans-serif;
+     color: #7D1FC9; 
+}
 /*==================================================
                     RESPONSIVE CSS
 ===================================================*/
